test/fixtures/generators/networkpolicy/cilium_cross_namespace_peer.golden.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: cilium-policy
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: kguardian
  name: web-cilium-policy
  namespace: prod
spec:
  description: Cilium network policy for pod web generated by kguardian
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:app: sonarr
        k8s:io.kubernetes.pod.namespace: downloads
    toPorts:
    - ports:
      - port: "8989"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:app: prometheus
        k8s:io.kubernetes.pod.namespace: monitoring
    toPorts:
    - ports:
      - port: "9090"
        protocol: TCP
  endpointSelector:
    matchLabels:
      k8s:app: web
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:app: maintainerr
        k8s:io.kubernetes.pod.namespace: media
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
status: {}
