test/fixtures/generators/networkpolicy/cilium_dualstack.golden.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: cilium-policy
    app.kubernetes.io/name: web6
    app.kubernetes.io/part-of: kguardian
  name: web6-cilium-policy
  namespace: prod
spec:
  description: Cilium network policy for pod web6 generated by kguardian
  egress:
  - toCIDR:
    - 10.96.0.10/32
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  - toCIDR:
    - fd00:96::a/128
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  endpointSelector:
    matchLabels:
      k8s:app: web
  ingress:
  - fromCIDR:
    - fd00::7/128
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
status: {}
