test/fixtures/generators/networkpolicy/cilium_with_traffic.golden.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: cilium-policy
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: kguardian
  name: web-cilium-policy
  namespace: prod
spec:
  description: Cilium network policy for pod web generated by kguardian
  egress:
  - toCIDR:
    - 10.96.0.10/32
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  endpointSelector:
    matchLabels:
      k8s:app: web
  ingress:
  - fromCIDR:
    - 10.0.0.7/32
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
status: {}
