test/fixtures/generators/networkpolicy/standard_cross_namespace_peer.golden.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: standard-policy
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: kguardian
  name: web-standard-policy
  namespace: prod
spec:
  egress:
  - ports:
    - port: 8989
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: downloads
      podSelector:
        matchLabels:
          app: sonarr
  - ports:
    - port: 9090
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app: prometheus
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: media
      podSelector:
        matchLabels:
          app: maintainerr
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: web
  policyTypes:
  - Ingress
  - Egress
