test/fixtures/generators/networkpolicy/standard_default_deny.golden.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: standard-policy-deny-all
    app.kubernetes.io/name: idle
    app.kubernetes.io/part-of: kguardian
  name: idle-standard-policy-deny-all
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: idle
  policyTypes:
  - Ingress
  - Egress
